--- a/index.html
+++ b/index.html
@@ -76,7 +76,23 @@
             <div id="reported">
                 <h1>Reported posts</h1>
             </div>
-        </main>
+        </main><br><br>
+        <!-- Question ans section -->
+        <section class="container">
+            <h3>Q-1: How does JavaScript work?</h3>
+            <p>
+                JavaScript is a scripting language for the web. We also know it is an interpreted language. Interpreted means it does not need any compiler to translate its code. JavaScript has a single Call Stack. That's why it can do one thing at a time. It is a Client-side Scripting Language.it is a computer programming language that runs inside an Internet browse.
+            </p>
+            <h3>Q-2: What does JS event loop do?</h3>
+            <p>
+                
+            </p>
+            <h3>Q-3: Local storage vs session storage difference</h3>
+            <p>
+                
+            </p>
+
+        </section>
         <footer></footer>
 
         <!-- add javascript  file  -->
