--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </p>
             <h3>Q-2: What does JS event loop do?</h3>
             <p>
-                
+                Event loop keeps a good communication with Call Stack and Callback Queue. it constantly checks whether or not the call stack is empty. It checks if the call stack is free, then lets know the callback queue. Then Callback queue passes the callback function to Call stack to be executed. When all the callback functions are executed, the call stack is out and global execution context is free.
             </p>
             <h3>Q-3: Local storage vs session storage difference</h3>
             <p>
