--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
             </p>
             <h3>Q-3: Local storage vs session storage difference</h3>
             <p>
-                Local Storage:
+                Local Storage: <br>
                     1.Data is shared between all tabs and windows from the same origin. <br>
                     2.The data will not delete. <br>
                     3.Data will remain even after browser restart and survive OS reboot too. <br>
 
-                Session storage:
+                Session storage: <br>
                     1.It exists only within the current browser tab. <br>
                     2.Another tab with the same page will have a different session storage. <br>
                     3.The data survives page refresh, but not closing/opening the tab.
